added divs, fixed placing

--- a/06_layout-html/index.html
+++ b/06_layout-html/index.html
@@ -10,10 +10,12 @@
 <body>
   <header class="header">
     <div class="container">
-      <div class="block-nav">
+      <div class="header-top">
         <img src="img/logo.jpg" alt="Логотип" class="header-logo">
         <a href="tel:+74953225448" class="phone">+7 495 322-54-48</a>
         <a href="#" class="signin">Личный кабинет</a>
+      </div>
+      <div class="block-nav">
         <nav class="nav">
           <ul class="nav-list">
             <li class="nav-item">
@@ -36,8 +38,10 @@
             </li>
           </ul>
         </nav>
-        <button class="btn block-nav-btn">Хочу тур</button>
-        <button class="btn block-nav-btn">Обратный звонок</button>
+        <div class="header-btns">
+          <button class="btn block-nav-btn">Хочу тур</button>
+          <button class="btn block-nav-btn">Обратный звонок</button>
+        </div>
       </div>
     </div>
   </header>
@@ -123,7 +127,7 @@
           <li class="features-item">
             <p class="feature-text">
               Идейные соображения высшего порядка,
-а&nbsp;также постоянный количественный рост
+              а&nbsp;также постоянный количественный рост
             </p>
           </li>
           <li class="features-item">
@@ -172,15 +176,17 @@
             <div class="placing-card">
               <img src="img/placing-1.jpg" alt="Lagoona española" class="placing-photo">
               <div class="price-review">
-                <p class="price">от 4 698 / ночь</p>
-                <img src="img/star.svg" alt="Рейтинг" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/empty_star.svg" alt="" class="review empty">
+                <span class="price">от 4 698 / ночь</span>
+                <div class="placing-review">
+                  <img src="img/star.svg" alt="Рейтинг" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/empty_star.svg" alt="" class="review empty">
+                </div>
               </div>
-              <p class="placing-name">Lagoona española</p>
-              <p class="placing-city">Барселона, Испания</p>
+              <h3 class="placing-name">Lagoona española</h3>
+              <span class="placing-title">Барселона, Испания</span>
               <button class="btn placing-btn">Номера</button>
             </div>
           </li>
@@ -188,15 +194,17 @@
             <div class="placing-card">
               <img src="img/placing-2.jpg" alt="Lagoona son típicas" class="placing-photo">
               <div class="price-review">
-                <p class="price">от 5 148 / ночь</p>
-                <img src="img/star.svg" alt="Рейтинг" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/empty_star.svg" alt="" class="review empty">
+                <span class="price">от 5 148 / ночь</span>
+                <div class="placing-review">
+                  <img src="img/star.svg" alt="Рейтинг" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/empty_star.svg" alt="" class="review empty">
+                </div>
               </div>
-              <p class="placing-name">Lagoona son típicas</p>
-              <p class="placing-city">Барселона, Испания</p>
+              <h3 class="placing-name">Lagoona son típicas</h3>
+              <span class="placing-title">Барселона, Испания</ps>an
               <button class="btn placing-btn">Номера</button>
             </div>
           </li>
@@ -204,15 +212,17 @@
             <div class="placing-card">
               <img src="img/placing-3.jpg" alt="Lagoona de la guerra" class="placing-photo">
               <div class="price-review">
-                <p class="price">от 6 254 / ночь</p>
-                <img src="img/star.svg" alt="Рейтинг" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
+                <span class="price">от 6 254 / ночь</span>
+                <div class="placing-review">
+                  <img src="img/star.svg" alt="Рейтинг" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                </div>
               </div>
-              <p class="placing-name">Lagoona de la guerra</p>
-              <p class="placing-city">Барселона, Испания</p>
+              <h3 class="placing-name">Lagoona de la guerra</h3>
+              <span class="placing-title">Барселона, Испания</ps>an
               <button class="btn placing-btn">Номера</button>
             </div>
           </li>
@@ -220,15 +230,17 @@
             <div class="placing-card">
               <img src="img/placing-4.jpg" alt="Lagoona mentira piadosa" class="placing-photo">
               <div class="price-review">
-                <p class="price">от 6 320 / ночь</p>
-                <img src="img/star.svg" alt="Рейтинг" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
+                <span class="price">от 6 320 / ночь</span>
+                <div class="placing-review">
+                  <img src="img/star.svg" alt="Рейтинг" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                </div>
               </div>
-              <p class="placing-name">Lagoona mentira piadosa</p>
-              <p class="placing-city">Барселона, Испания</p>
+              <h3 class="placing-name">Lagoona mentira piadosa</h3>
+              <span class="placing-title">Барселона, Испания</ps>an
               <button class="btn placing-btn">Номера</button>
             </div>
           </li>
@@ -236,15 +248,17 @@
             <div class="placing-card">
               <img src="img/placing-5.jpg" alt="Lagoona empujar la creatividad" class="placing-photo">
               <div class="price-review">
-                <p class="price">от 6 457 / ночь</p>
-                <img src="img/star.svg" alt="Рейтинг" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/empty_star.svg" alt="" class="review empty">
+                <span class="price">от 6 457 / ночь</span>
+                <div class="placing-review">
+                  <img src="img/star.svg" alt="Рейтинг" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/empty_star.svg" alt="" class="review empty">
+                </div>
               </div>
-              <p class="placing-name">Lagoona empujar la creatividad</p>
-              <p class="placing-city">Барселона, Испания</p>
+              <h3 class="placing-name">Lagoona empujar la creatividad</h3>
+              <span class="placing-title">Барселона, Испания</ps>an
               <button class="btn placing-btn">Номера</button>
             </div>
           </li>
@@ -252,15 +266,17 @@
             <div class="placing-card">
               <img src="img/placing-6.jpg" alt="Lagoona el retorno" class="placing-photo">
               <div class="price-review">
-                <p class="price">от 6 320 / ночь</p>
-                <img src="img/star.svg" alt="Рейтинг" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/empty_star.svg" alt="" class="review empty">
+                <span class="price">от 6 320 / ночь</span>
+                <div class="placing-review">
+                  <img src="img/star.svg" alt="Рейтинг" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/empty_star.svg" alt="" class="review empty">
+                </div>
               </div>
-              <p class="placing-name">Lagoona el retorno</p>
-              <p class="placing-city">Барселона, Испания</p>
+              <h3 class="placing-name">Lagoona el retorno</h3>
+              <span class="placing-title">Барселона, Испания</ps>an
               <button class="btn placing-btn">Номера</button>
             </div>
           </li>
@@ -268,15 +284,17 @@
             <div class="placing-card">
               <img src="img/placing-7.jpg" alt="Lagoona mentira piadosa" class="placing-photo">
               <div class="price-review">
-                <p class="price">от 6 505 / ночь</p>
-                <img src="img/star.svg" alt="Рейтинг" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
+                <span class="price">от 6 505 / ночь</span>
+                <div class="placing-review">
+                  <img src="img/star.svg" alt="Рейтинг" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                </div>
               </div>
-              <p class="placing-name">Lagoona mentira piadosa</p>
-              <p class="placing-city">Барселона, Испания</p>
+              <h3 class="placing-name">Lagoona mentira piadosa</h3>
+              <span class="placing-title">Барселона, Испания</ps>an
               <button class="btn placing-btn">Номера</button>
             </div>
           </li>
@@ -284,15 +302,17 @@
             <div class="placing-card">
               <img src="img/placing-8.jpg" alt="Lagoona suerte siguió siempre" class="placing-photo">
               <div class="price-review">
-                <p class="price">от 6 824 / ночь</p>
-                <img src="img/star.svg" alt="Рейтинг" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/star.svg" alt="" class="review">
-                <img src="img/empty_star.svg" alt="" class="review empty">
+                <span class="price">от 6 824 / ночь</span>
+                <div class="placing-review">
+                  <img src="img/star.svg" alt="Рейтинг" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/star.svg" alt="" class="review">
+                  <img src="img/empty_star.svg" alt="" class="review empty">
+                </div>
               </div>
-              <p class="placing-name">Lagoona suerte siguió siempre</p>
-              <p class="placing-city">Барселона, Испания</p>
+              <h3 class="placing-name">Lagoona suerte siguió siempre</h3>
+              <span class="placing-title">Барселона, Испания</ps>an
               <button class="btn placing-btn">Номера</button>
             </div>
           </li>
