--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
           </div>
           <div class="right-offer flex">
             <article class="offer-article right-article flex">
-              <h3 class="offer-title">Номера категории люкс</h3>
-              <span class="offer-price">от 5 000</span>
+              <h3 class="offer-title right-offer-title">Номера категории люкс</h3>
+              <span class="offer-price right-offer-price">от 5 000</span>
               <p class="more-wrap">
                 <a href="#" class="more">Подробнее</a>
               </p>
@@ -85,7 +85,7 @@
     </section>
     <section id="about" class="about section-offset">
       <div class="container">
-        <div class="left-block">
+        <div class="about-left-block">
           <h2 class="section-title about-title">О нас</h2>
           <p class="about-text">
             Идейные соображения высшего порядка, а&nbsp;также сложившаяся структура организации влечёт за&nbsp;собой
@@ -197,7 +197,8 @@
             <img src="img/placing-1.jpg" alt="Lagoona española" class="placing-photo">
             <div class="placing-card flex">
               <div class="price-review flex">
-                <span class="price"><span class="price-from">от</span> 4 698 <span class="price-for">/ ночь</span></span>
+                <span class="price"><span class="price-from">от</span> 4 698 <span class="price-for">/
+                    ночь</span></span>
                 <div class="placing-review flex">
                   <img src="img/star.svg" alt="Рейтинг" class="review">
                   <img src="img/star.svg" alt="" class="review">
@@ -217,7 +218,8 @@
             <img src="img/placing-2.jpg" alt="Lagoona son típicas" class="placing-photo">
             <div class="placing-card flex">
               <div class="price-review flex">
-                <span class="price"><span class="price-from">от</span> 5 148 <span class="price-for">/ ночь</span></span>
+                <span class="price"><span class="price-from">от</span> 5 148 <span class="price-for">/
+                    ночь</span></span>
                 <div class="placing-review">
                   <img src="img/star.svg" alt="Рейтинг" class="review">
                   <img src="img/star.svg" alt="" class="review">
@@ -237,7 +239,8 @@
             <img src="img/placing-3.jpg" alt="Lagoona de la guerra" class="placing-photo">
             <div class="placing-card flex">
               <div class="price-review flex">
-                <span class="price"><span class="price-from">от</span> 6 254 <span class="price-for">/ ночь</span></span>
+                <span class="price"><span class="price-from">от</span> 6 254 <span class="price-for">/
+                    ночь</span></span>
                 <div class="placing-review">
                   <img src="img/star.svg" alt="Рейтинг" class="review">
                   <img src="img/star.svg" alt="" class="review">
@@ -257,7 +260,8 @@
             <img src="img/placing-4.jpg" alt="Lagoona mentira piadosa" class="placing-photo">
             <div class="placing-card flex">
               <div class="price-review flex">
-                <span class="price"><span class="price-from">от</span> 6 320 <span class="price-for">/ ночь</span></span>
+                <span class="price"><span class="price-from">от</span> 6 320 <span class="price-for">/
+                    ночь</span></span>
                 <div class="placing-review">
                   <img src="img/star.svg" alt="Рейтинг" class="review">
                   <img src="img/star.svg" alt="" class="review">
@@ -277,7 +281,8 @@
             <img src="img/placing-5.jpg" alt="Lagoona empujar la creatividad" class="placing-photo">
             <div class="placing-card flex">
               <div class="price-review flex">
-                <span class="price"><span class="price-from">от</span> 6 457 <span class="price-for">/ ночь</span></span>
+                <span class="price"><span class="price-from">от</span> 6 457 <span class="price-for">/
+                    ночь</span></span>
                 <div class="placing-review">
                   <img src="img/star.svg" alt="Рейтинг" class="review">
                   <img src="img/star.svg" alt="" class="review">
@@ -297,7 +302,8 @@
             <img src="img/placing-6.jpg" alt="Lagoona el retorno" class="placing-photo">
             <div class="placing-card flex">
               <div class="price-review flex">
-                <span class="price"><span class="price-from">от</span> 6 320 <span class="price-for">/ ночь</span></span>
+                <span class="price"><span class="price-from">от</span> 6 320 <span class="price-for">/
+                    ночь</span></span>
                 <div class="placing-review">
                   <img src="img/star.svg" alt="Рейтинг" class="review">
                   <img src="img/star.svg" alt="" class="review">
@@ -317,7 +323,8 @@
             <img src="img/placing-7.jpg" alt="Lagoona mentira piadosa" class="placing-photo">
             <div class="placing-card flex">
               <div class="price-review flex">
-                <span class="price"><span class="price-from">от</span> 6 505 <span class="price-for">/ ночь</span></span>
+                <span class="price"><span class="price-from">от</span> 6 505 <span class="price-for">/
+                    ночь</span></span>
                 <div class="placing-review">
                   <img src="img/star.svg" alt="Рейтинг" class="review">
                   <img src="img/star.svg" alt="" class="review">
@@ -337,7 +344,8 @@
             <img src="img/placing-8.jpg" alt="Lagoona suerte siguió siempre" class="placing-photo">
             <div class="placing-card flex">
               <div class="price-review flex">
-                <span class="price"><span class="price-from">от</span> 6 824 <span class="price-for">/ ночь</span></span>
+                <span class="price"><span class="price-from">от</span> 6 824 <span class="price-for">/
+                    ночь</span></span>
                 <div class="placing-review">
                   <img src="img/star.svg" alt="Рейтинг" class="review">
                   <img src="img/star.svg" alt="" class="review">
@@ -359,10 +367,128 @@
         </ul>
       </div>
     </section>
+    <section class="tour section-offset">
+      <div class="container tour-container">
+        <h2 class="section-title tour-title">Хочу тур</h2>
+        <form action="https://jsonplaceholder.typicode.com/posts" method="POST" class="form flex">
+          <label class="label city-select">
+            <span class="form-desc">Город вылета</span>
+            <select name="city" class="field-reset form-select field">
+              <option value="Сыктывкар">Сыктывкар</option>
+              <option value="Сызрань">Сызрань</option>
+              <option value="Ставрополь">Ставрополь</option>
+              <option value="Сочи">Сочи</option>
+              <option value="Симферополь">Симферополь</option>
+              <option value="Северодвинск">Северодвинск</option>
+              <option value="Севастополь">Севастополь</option>
+              <option value="Саранск">Саранск</option>
+              <option value="Санкт-Петербург" selected>Санкт-Петербург</option>
+            </select>
+          </label>
+          <label class="label counrty-select">
+            <span class="form-desc">Страна</span>
+            <select name="city" class="field-reset form-select field">
+              <option value="Белгия">Белгия</option>
+              <option value="Белоруссия">Белоруссия</option>
+              <option value="Армения">Армения</option>
+              <option value="Аргентина">Аргентина</option>
+              <option value="Англия">Англия</option>
+              <option value="Албания">Албания</option>
+              <option value="Азербайджан">Азербайджан</option>
+              <option value="Австрия">Австрия</option>
+              <option value="Австралия" selected>Австралия</option>
+            </select>
+          </label>
+          <label class="label date-input">
+            <span class="form-desc">Дата прибытия</span>
+            <input type="date" class="field-reset field">
+          </label>
+          <label class="label nights-input">
+            <span class="form-desc">Ночей</span>
+            <input type="number" name="nights" class="field-reset field num-field">
+          </label>
+          <label class="label tourists-input">
+            <span class="form-desc">Туристы</span>
+            <input type="number" name="tourists_num" class="field-reset field num-field">
+          </label>
+          <button class="btn btn-reset btn">Найти</button>
+        </form>
+      </div>
+    </section>
+
+    <section class="contacts section-offset">
+      <div class="container">
+        <h2 class="section-title contacts-title">Контакты</h2>
+        <div class="block-contacts flex">
+          <div class="left-block">
+            <ul class="contacts-list list-reset">
+              <li class="contacts-item flex">
+                <h3 class="contacts-item-title address-title">Адрес</h3>
+                <div class="contacts-info">
+                  <address class="contacts-address">Москва, улица Юности,<br />дом 5&nbsp;строение&nbsp;4, офис&nbsp;2</address>
+                </div>
+              </li>
+              <li class="contacts-item flex">
+                <h3 class="contacts-item-title phone-title">Телефоны</h3>
+                <div class="contacts-info">
+                  <a href="tel:+74995356434" class="contacts-item-phone">+7 499 535-64-34</a>
+                  <a href="tel:+74950050544" class="contacts-item-phone">+7 495 005-05-44</a>
+                </div>
+              </li>
+              <li class="contacts-item flex">
+                <h3 class="contacts-item-title email-title">Email</h3>
+                <div class="contacts-info">
+                  <a href="mailto:lg.oona@mail.ru" class="contacts-item-email">lg.oona@mail.ru</a>
+                  <span class="contacts-desc">по&nbsp;вопросам бронирования</span>
+                  <a href="mailto:hotels.ln@mail.ru" class="contacts-item-email">hotels.ln@mail.ru</a>
+                  <span class="contacts-desc">по&nbsp;вопросам сотрудничества</span>
+                </div>
+              </li>
+              <li class="contacts-item flex">
+                <h3 class="contacts-item-title schedule-title">График</h3>
+                <div class="contacts-info">
+                  <span class="schedule">Понедельник-пятница,<br /> с <time>10:00 до 19:00</time></span>
+                </div>
+              </li>
+            </ul>
+            <button class="btn btn-reset contacts-button">Построить маршрут</button>
+          </div>
+          <div class="right-block">
+            <img src="img/contacts-img.jpg" alt="Ресепшн lagoona" class="reception-image">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
-
+    <div class="container">
+      <div class="footer-container flex">
+        <div class="footer-left">
+          <p class="footer-paragraph">&copy;&nbsp;2012&ndash;2020 Управляющая компания Объединённой сети &laquo;Лагуна Хотелс&raquo;</p>
+          <p class="footer-paragraph">Представленная на&nbsp;сайте информация носит справочный характер и&nbsp;не&nbsp;является публичной офертой</p>
+          <a href="#" class="agreement">Пользовательское соглашение</a>
+        </div>
+        <div class="footer-center flex">
+          <address  class="footer-address">11710, улица Юности, дом 5 строение 4, офис 2</address>
+          <div class="footer-links footer-block">
+            <a href="tel:+74995356434" class="footer-link">+7 499 535-64-34</a>
+            <a href="tel:+74950050544" class="footer-link">+7 495 005-05-44</a>
+          </div>
+          <div class="footer-emails footer-block">
+            <a href="mailto:lg.oona@mail.ru" class="footer-email">lg.oona@mail.ru</a>
+            <a href="mailto:hotels.ln@mail.ru" class="footer-email">hotels.ln@mail.ru</a>
+          </div>
+        </div>
+        <div class="footer-right">
+          <ul class="social-networks list-reset">
+            <li class="social-network-item"><img src="img/tripadvisor.svg" alt="tripadvisor"></li>
+            <li class="social-network-item"><img src="img/ok.svg" alt="Одноклассники"></li>
+            <li class="social-network-item"><img src="img/vkontakte.svg" alt="Вконтакте"></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
 
