--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
           </label>
           <label class="label counrty-select">
             <span class="form-desc">Страна</span>
-            <select name="city" class="field-reset form-select field">
+            <select name="country" class="field-reset form-select field">
               <option value="Белгия">Белгия</option>
               <option value="Белоруссия">Белоруссия</option>
               <option value="Армения">Армения</option>
@@ -401,15 +401,15 @@
           </label>
           <label class="label date-input">
             <span class="form-desc">Дата прибытия</span>
-            <input type="date" class="field-reset field">
+            <input type="date" class="field-reset field" required>
           </label>
           <label class="label nights-input">
             <span class="form-desc">Ночей</span>
-            <input type="number" name="nights" class="field-reset field num-field">
+            <input type="number" name="nights" class="field-reset field num-field" required>
           </label>
           <label class="label tourists-input">
             <span class="form-desc">Туристы</span>
-            <input type="number" name="tourists_num" class="field-reset field num-field">
+            <input type="number" name="tourists_num" class="field-reset field num-field" required>
           </label>
           <button class="btn btn-reset btn">Найти</button>
         </form>
@@ -472,19 +472,25 @@
         <div class="footer-center flex">
           <address  class="footer-address">11710, улица Юности, дом 5 строение 4, офис 2</address>
           <div class="footer-links footer-block">
-            <a href="tel:+74995356434" class="footer-link">+7 499 535-64-34</a>
-            <a href="tel:+74950050544" class="footer-link">+7 495 005-05-44</a>
+            <span class="footer-link-wrap"><a href="tel:+74995356434" class="footer-link">+7 499 535-64-34</a></span>
+            <span class="footer-link-wrap"><a href="tel:+74950050544" class="footer-link">+7 495 005-05-44</a></span>
           </div>
           <div class="footer-emails footer-block">
-            <a href="mailto:lg.oona@mail.ru" class="footer-email">lg.oona@mail.ru</a>
-            <a href="mailto:hotels.ln@mail.ru" class="footer-email">hotels.ln@mail.ru</a>
+            <span class="footer-link-wrap"><a href="mailto:lg.oona@mail.ru" class="footer-link">lg.oona@mail.ru</a></span>
+            <span class="footer-link-wrap"><a href="mailto:hotels.ln@mail.ru" class="footer-link">hotels.ln@mail.ru</a></span>
           </div>
         </div>
         <div class="footer-right">
-          <ul class="social-networks list-reset">
-            <li class="social-network-item"><img src="img/tripadvisor.svg" alt="tripadvisor"></li>
-            <li class="social-network-item"><img src="img/ok.svg" alt="Одноклассники"></li>
-            <li class="social-network-item"><img src="img/vkontakte.svg" alt="Вконтакте"></li>
+          <ul class="social-networks list-reset flex">
+            <li class="social-network-item">
+              <a href="#" class="social-network tripadvisor"></a>
+            </li>
+            <li class="social-network-item">
+              <a href="#" class="social-network ok"></a>
+            </li>
+            <li class="social-network-item">
+              <a href="#" class="social-network vkontakte"></a>
+            </li>
           </ul>
         </div>
       </div>
