fixed page effects

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <div class="header-top flex">
         <img src="img/logo.jpg" alt="Логотип" class="header-logo">
         <a href="tel:+74953225448" class="phone link-gray">+7 495 322-54-48</a>
-          <a href="#" class="signin link">
-            <svg width="21" height="12" viewBox="0 0 21 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M10.59 1.41L14.17 5H0V7H14.17L10.58 10.59L12 12L18 6L12 0L10.59 1.41ZM19 0V12H21V0H19Z" />
-            </svg>
-            <span>Личный кабинет</span>
-          </a>
+        <a href="#" class="signin link">
+          <svg width="21" height="12" viewBox="0 0 21 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M10.59 1.41L14.17 5H0V7H14.17L10.58 10.59L12 12L18 6L12 0L10.59 1.41ZM19 0V12H21V0H19Z" />
+          </svg>
+          <span>Личный кабинет</span>
+        </a>
       </div>
       <div class="block-nav flex">
         <nav class="nav">
@@ -59,19 +59,19 @@
         <h2 class="section-title special-offers-title">Спецпредложения</h2>
 
         <div class="offers-block flex">
-          <div class="left-offers flex">
+          <div class="left-offers flex ">
             <article class="offer-article left-article flex left-top-article">
               <h3 class="offer-title">Мальдивские острова</h3>
               <span class="offer-price">от 55 000</span>
               <p class="more-wrap">
-                <a href="#" class="more link">Подробнее</a>
+                <a href="#" class="more">Подробнее</a>
               </p>
             </article>
             <article class="offer-article left-article flex left-bottom-article">
               <h3 class="offer-title">Горящий тур на остров Крит</h3>
               <span class="offer-price">от 30 000</span>
               <p class="more-wrap">
-                <a href="#" class="more link">Подробнее</a>
+                <a href="#" class="more">Подробнее</a>
               </p>
             </article>
           </div>
@@ -80,7 +80,7 @@
               <h3 class="offer-title right-offer-title">Номера категории люкс</h3>
               <span class="offer-price right-offer-price">от 5 000</span>
               <p class="more-wrap">
-                <a href="#" class="more link">Подробнее</a>
+                <a href="#" class="more">Подробнее</a>
               </p>
             </article>
           </div>
@@ -113,14 +113,25 @@
           <li class="services-item">
             <img src="img/service-1.jpg" alt="Эксклюзивное обслуживание" class="service-photo">
             <div class="service-card-bottom">
-              <a href="#" class="service-link link">Эксклюзивное обслуживание</a>
+              <a href="#" class="service-link">
+                <span class="service-link-span">Эксклюзивное обслуживание</span>
+                <svg width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.778175 1.00002L8.55635 8.7782L0.778175 16.5564" stroke-width="2" />
+                </svg>
+              </a>
               <p class="service-desc">Равным образом постоянный количественный рост и&nbsp;сфера нашей активности</p>
             </div>
           </li>
           <li class="services-item">
             <img src="img/service-3.jpg" alt="Аренда банкетных залов" class="service-photo">
             <div class="service-card-bottom">
-              <a href="#" class="service-link link">Аренда банкетных залов</a>
+              <a href="#" class="service-link">
+                <span class="service-link-span">Аренда банкетных залов</span>
+                <svg width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.778175 1.00002L8.55635 8.7782L0.778175 16.5564" stroke-width="2" />
+                </svg>
+
+              </a>
               <p class="service-desc">Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм
               </p>
             </div>
@@ -128,7 +139,13 @@
           <li class="services-item">
             <img src="img/service-2.jpg" alt="Сауны, бассейны, бани, фитнес-залы" class="service-photo">
             <div class="service-card-bottom">
-              <a href="#" class="service-link link">Сауны, бассейны, бани, фитнес-залы</a>
+              <a href="#" class="service-link">
+                <span class="service-link-span">Сауны, бассейны, бани, фитнес-залы</span>
+                <svg width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.778175 1.00002L8.55635 8.7782L0.778175 16.5564" stroke-width="2" />
+                </svg>
+
+              </a>
               <p class="service-desc">Не&nbsp;следует, однако забывать, что начало повседневной работы
                 по&nbsp;формированию
                 позиции</p>
@@ -137,7 +154,13 @@
           <li class="services-item">
             <img src="img/service-4.jpg" alt="Охраняемые автомобильные стоянки" class="service-photo">
             <div class="service-card-bottom">
-              <a href="#" class="service-link link">Охраняемые автомобильные стоянки</a>
+              <a href="#" class="service-link">
+                <span class="service-link-span">Охраняемые автомобильные стоянки</span>
+                <svg width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.778175 1.00002L8.55635 8.7782L0.778175 16.5564" stroke-width="2" />
+                </svg>
+
+              </a>
               <p class="service-desc">Не&nbsp;следует, однако забывать, что начало повседневной работы
                 по&nbsp;формированию
                 позиции</p>
