fixed page effects

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </section>
     <section id="placing" class="placing section-offset">
       <div class="container">
-        <h2 class="cection-title placing-title">Размещение</h2>
+        <h2 class="section-title placing-title">Размещение</h2>
         <ul class="placing-list list-reset">
           <li class="placing-item">
             <img src="img/placing-1.jpg" alt="Lagoona española" class="placing-photo">
